syntax = "proto3";
package commitment;

import "gogoproto/gogo.proto";

option go_package = "github.com/hyperledger-labs/yui-fabric-ibc/chaincode/commitment";

message Sequence {
  uint64 value     = 1 [(gogoproto.jsontag) = "value"];
  int64 timestamp  = 2 [(gogoproto.jsontag) = "timestamp"];
}

message CommitmentEntry {
  string key   = 1 [(gogoproto.jsontag) = "key"];
  string value = 2 [(gogoproto.jsontag) = "value"]; // value is the base64 encoding of actual `Entry.value` (type is []byte)
}
